# clickhouseVector

./: .gitignore  0_initialize.sh  1_string_sample.sh  2_list_sample.sh  3_query_watch.sh  4_semantic_sample.sh  LICENSE  README.md  compose.yaml
bentoML/: Dockerfile  bentofile.yaml  requirements.txt  service.py
bentoML/.devcontainer/: devcontainer.json
bentoML/modules/: nlp_model.py
data/: LICENCE
datagen/: main.py  pyproject.toml  requirements.txt  sample.ipynb
datagen/modules/: chunk.py  document.py  nlp_model.py
query/: 00_drop_db.sql  01_init_db.sql  02_init_table.sql  03_insert_csv.sql  04_select_one.sql  05_select_string_sample.sql  06_select_list_template.sql  07_query_log_string.sql  08_select_semtantic_template.sql
